deleted README.md and added pasta recipe
README.md was a duplicate so I deleted it. I added pasta.html and linked to it from the inde

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>recipes website</title>
     <meta chartype="utc-8>">
     <body>
-    <h1>Odin recipes</h1>
+        <h1>Odin recipes</h1>
+            <p><a href="./recipes/pasta.html">pasta recipe</a><p/>
     </body>
 </head>
 </html>
