added description, incredience, and steps to pasta.html
Details required as per odin instruction set

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -6,5 +6,23 @@
     </head>
     <body>
     <h1>pasta recipe</h1>
+    <img src="https://2.bp.blogspot.com/-fYMIVPO5PCA/UjHIwJ0SzWI/AAAAAAAAIh4/7oTOXXasJLA/s1600/the-castle-of-cagliostro-jigen-eating-spaghetti-688px.jpg" width="300">
+    <p>Spaghetti meatballs that have been inspired by <a href="https://en.wikipedia.org/wiki/The_Castle_of_Cagliostro" target="_blank">The Castle of Cagliostro</a>. it's easy to make and delicious.</p>
+    <h2>ingredients</h2>
+    <ul>
+        <li>spaghetti</li>
+        <li>tomato pasta sauce</li>
+        <li>sausages (for the meatballs)</li>
+        <li>parmesan cheese</li>
+    </ul>
+    <h2>steps</h2>
+    <ol>
+        <li>cook the pasta as per directions</li>
+        <li>heat the pasta sauce</li>
+        <li>squeeze the meat out of the sausages into the shape of meat balls</li>
+        <li>fry the meat balls</li>
+        <li>add the pasta, pasta sauce, and meatballs together</li>
+        <li>serve onto plates and add cheese</li>
+    </ol>
     </body>
 </html>
